frontend/src/components/rtsp-grid/rtsp-grid.css
.gridContainer {
    display: flex;
    flex-direction: row;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    height: 550px;
    width: 1000px;
}

.listContainer {
    height: 100%;
    width: 350px;
    background: #001f3f;
}

.playerContainer {
    position: relative;
    height: 100%;
    width: 700px;
    margin-left: 50px;
    background: white;
}

.list {
    padding: 0;
    margin: 0;
    list-style: none;
    color: white;
    overflow: scroll;
    font-family: sans-serif;
} 

.urlItem {
    border-color: white;
    border-style: solid;
    border-width: 0 0 1px 0;
    height: 40px;
    text-align: center;
    position: relative;
    cursor: pointer;
}

.urlTitle {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 90%;
    padding-left: 15px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

#videoCanvas {
    width: 100%;
    height: 100%;
}

.playerPlaceholder {
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 300px;
    height: 40px;
    font-size: 40px;
}

